--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@egjs/flicking-plugins": "^3.2.0",
     "@egjs/react-flicking": "^3.2.2",
-    "apollo-server": "^2.19.1",
+    "apollo-server-express": "^2.19.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
