--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
     "version": "0.2.1",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^3.3.6",
         "@egjs/flicking": "^3.4.7",
         "@material-ui/core": "^4.9.14",
         "@material-ui/icons": "^4.9.1",
@@ -12,10 +13,12 @@
         "clsx": "^1.1.0",
         "color": "^3.1.2",
         "flubber": "^0.4.2",
+        "graphql": "^15.4.0",
         "material-table": "^1.57.2",
         "node-sass": "^4.14.1",
         "prop-types": "^15.6.2",
         "react": "^16.13.1",
+        "react-apollo": "^3.1.5",
         "react-awesome-button": "^6.5.1",
         "react-dom": "^16.13.1",
         "react-gif-player": "^0.4.2",
