--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
         "react-spring": "^8.0.27",
         "react-step-progress-bar": "^1.0.3",
         "react-swipeable-views": "^0.12.17",
+        "recoil": "^0.1.2",
         "spectacle": "^5.0.1",
         "typeface-roboto": "0.0.54"
     },
