--- a/client/package.json
+++ b/client/package.json
@@ -31,10 +31,11 @@
         "react-scripts": "3.4.0",
         "react-spring": "^8.0.27",
         "react-step-progress-bar": "^1.0.3",
-        "react-swipeable-views": "^0.12.17",
+        "react-swipeable-views": "^0.12.18",
         "react-ui-cards": "^2.0.0",
         "recoil": "^0.1.2",
         "spectacle": "^5.0.1",
+        "styled-components": "^5.2.1",
         "typeface-roboto": "0.0.54"
     },
     "scripts": {
