--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
-    "@egjs/flicking-plugins": "^3.2.0",
-    "@egjs/react-flicking": "^3.2.2",
     "apollo-server-express": "^2.19.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "concurrently": "^4.0.1",
@@ -29,10 +27,7 @@
     "helmet": "^3.21.2",
     "mongoose": "^5.6.8",
     "node-fetch": "^2.6.0",
-    "puppeteer": "^2.0.0",
-    "react-images": "^1.1.7",
-    "socket.io": "^2.3.0",
-    "unsplash-js": "^6.0.0"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.11",
