--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "color": "^3.1.2",
         "flubber": "^0.4.2",
         "graphql": "^15.4.0",
+        "hero-slider": "^2.0.3",
         "material-table": "^1.57.2",
         "node-sass": "^4.14.1",
         "prop-types": "^15.6.2",
