--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "react-awesome-button": "^6.5.1",
         "react-dom": "^16.13.1",
         "react-gif-player": "^0.4.2",
+        "react-id-swiper": "^4.0.0",
         "react-inlinesvg": "^1.1.6",
         "react-minimal-pie-chart": "^6.0.1",
         "react-parallax": "^3.1.2",
@@ -38,6 +39,7 @@
         "recoil": "^0.1.2",
         "spectacle": "^5.0.1",
         "styled-components": "^5.2.1",
+        "swiper": "^6.4.7",
         "typeface-roboto": "0.0.54"
     },
     "scripts": {
