--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@material-ui/styles": "^4.9.14",
+        "@mui-treasury/components": "^1.9.2",
         "caniuse-api": "^3.0.0",
         "clsx": "^1.1.0",
         "color": "^3.1.2",
