--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
         "react-id-swiper": "^4.0.0",
         "react-inlinesvg": "^1.1.6",
         "react-minimal-pie-chart": "^6.0.1",
+        "react-notifications-component": "^3.0.3",
         "react-parallax": "^3.1.2",
         "react-player": "^1.15.3",
         "react-pose": "^4.0.8",
