swap React-Notifications for React Toastify due to the latter's superior animation and features

--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,6 @@
         "react-id-swiper": "^4.0.0",
         "react-inlinesvg": "^1.1.6",
         "react-minimal-pie-chart": "^6.0.1",
-        "react-notifications-component": "^3.0.3",
         "react-parallax": "^3.1.2",
         "react-player": "^1.15.3",
         "react-pose": "^4.0.8",
@@ -39,6 +38,7 @@
         "react-spring": "^8.0.27",
         "react-step-progress-bar": "^1.0.3",
         "react-swipeable-views": "^0.12.18",
+        "react-toastify": "^7.0.3",
         "react-ui-cards": "^2.0.0",
         "recoil": "^0.1.2",
         "spectacle": "^5.0.1",
