--- a/client/package.json
+++ b/client/package.json
@@ -26,22 +26,20 @@
         "react-dom": "^16.13.1",
         "react-gif-player": "^0.4.2",
         "react-id-swiper": "^4.0.0",
+        "react-images-upload": "^1.2.8",
         "react-inlinesvg": "^1.1.6",
         "react-minimal-pie-chart": "^6.0.1",
-        "react-parallax": "^3.1.2",
         "react-player": "^1.15.3",
         "react-pose": "^4.0.8",
         "react-pose-text": "^3.1.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.0",
-        "react-scroll-parallax": "^2.3.5",
         "react-spring": "^8.0.27",
         "react-step-progress-bar": "^1.0.3",
         "react-swipeable-views": "^0.12.18",
         "react-toastify": "^7.0.3",
         "react-ui-cards": "^2.0.0",
         "recoil": "^0.1.2",
-        "spectacle": "^5.0.1",
         "styled-components": "^5.2.1",
         "swiper": "^6.4.8",
         "typeface-roboto": "0.0.54"
