--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "firebase": "^8.2.7",
     "graphql": "^15.4.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.6.8",
