--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^3.21.2",
     "mongoose": "^5.6.8",
     "node-fetch": "^2.6.0",
+    "react-firebase": "^2.2.8",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
