--- a/firebase.json
+++ b/firebase.json
@@ -4,15 +4,17 @@
   },
   "hosting": {
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
+      }
+    ],
+    "headers": [
+      {
+        "key": "Access-Control-Allow-Origin",
+        "value": "*"
       }
     ]
   },
