revert to using heroku's server

--- a/firebase.json
+++ b/firebase.json
@@ -13,8 +13,13 @@
     ],
     "headers": [
       {
-        "key": "Access-Control-Allow-Origin",
-        "value": "*"
+        "source": "**/*.@(eot|otf|ttf|ttc|woff|font.css)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          }
+        ]
       }
     ]
   },
