--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@material-ui/styles": "^4.9.14",
         "@mui-treasury/components": "^1.9.2",
+        "@rpldy/upload-preview": "^0.9.0",
+        "@rpldy/uploady": "^0.9.0",
         "caniuse-api": "^3.0.0",
         "clsx": "^1.1.0",
         "color": "^3.1.2",
