--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
         "react-toastify": "^7.0.3",
         "react-ui-cards": "^2.0.0",
         "recoil": "^0.1.2",
+        "scroll-snap": "^3.2.3",
         "styled-components": "^5.2.1",
         "swiper": "^6.4.8",
         "typeface-roboto": "0.0.54"
