--- a/client/package.json
+++ b/client/package.json
@@ -5,16 +5,18 @@
     "dependencies": {
         "@apollo/client": "^3.3.6",
         "@egjs/flicking": "^3.4.7",
-        "@material-ui/core": "^4.9.14",
+        "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.53",
         "@material-ui/styles": "^4.9.14",
         "@mui-treasury/components": "^1.9.2",
         "@rpldy/upload-preview": "^0.9.0",
         "@rpldy/uploady": "^0.9.0",
+        "call-bind": "^1.0.2",
         "caniuse-api": "^3.0.0",
         "clsx": "^1.1.0",
         "color": "^3.1.2",
+        "file-upload-with-preview": "^4.2.0",
         "flubber": "^0.4.2",
         "graphql": "^15.4.0",
         "hero-slider": "^2.0.3",
