--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.3.0",
   "description": "A web server for Weiss English",
   "engines": {
-    "node": "12.13.0",
     "npm": "6.9.0"
   },
+  "os": [
+    "darwin",
+    "win32"
+  ],
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -17,19 +20,23 @@
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
+    "-": "0.0.1",
     "apollo-server-express": "^2.19.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "concurrently": "^4.0.1",
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "file-upload-with-preview": "^4.1.0",
     "firebase": "^8.2.7",
+    "g": "^2.0.1",
     "graphql": "^15.4.0",
     "helmet": "^3.21.2",
+    "http": "0.0.1-security",
     "mongoose": "^5.6.8",
     "node-fetch": "^2.6.0",
     "react-firebase": "^2.2.8",
+    "server": "^1.0.36",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
